// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Twitch Chat/Chat Basic 1`] = `
<div
  className="twitch-chatchat-basic-makestyles-root-1"
>
  <div
    className="twitch-chatchat-basic-makestyles-fade-1"
  />
</div>
`;

exports[`Storyshots Twitch Chat/Chat Live Chat 1`] = `
<div
  className="twitch-chatchat-live-chat-makestyles-root-1"
>
  <div
    className="twitch-chatchat-live-chat-makestyles-fade-1"
  />
</div>
`;
